# FortiEscrow

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRAMEWORK_AUDIT.md  FRAMEWORK_READINESS_CHECKLIST.md  LICENSE  Makefile  PRODUCTION_READY.md  README.md  SECURITY_AUDIT.md  TESTING_DEPLOYMENT.md  VERIFICATION_INDEX.md  adversarial_tests.py  audit_verification.py  conftest.py  fix_test_conventions.py  forti_escrow.py  pyproject.toml  requirements.txt  reusability_tests.py  semantic_tests.py  test_forti_escrow.py
.github/: CODEOWNERS  GITHUB_CONFIGURATION.md  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: codeql.yml  docs.yml  documentation.yml  pr-management.yml  release.yml  security.yml  test.yml  tests.yml
contracts/: README.md  __init__.py  invariants_enforcement.py
contracts/adapters/: __init__.py  escrow_adapter.py
contracts/core/: README.md  __init__.py  escrow_base.py  escrow_factory.py  escrow_multisig.py  forti_escrow.py  invariants.py
contracts/interfaces/: README.md  __init__.py  errors.py  events.py  types.py
contracts/utils/: README.md  __init__.py  amount_validator.py  timeline_manager.py  validators.py
contracts/variants/: README.md
docs/: API.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SEMANTICS.md  STRUCTURE.txt
docs/api_reference/: README.md
docs/developer_guide/: FOLDER_STRUCTURE.md  README.md
docs/examples/: README.md
docs/security_guide/: README.md
docs/user_guide/: README.md  deployment_guide.md
scripts/: README.md
scripts/deployment/: README.md
scripts/testing/: README.md
scripts/utils/: README.md
sdk/typescript/: forti-escrow-sdk.ts
security/: PROJECT_STATUS.md  README.md  SECURITY.md
security/invariants/: README.md  authorization_invariants.md  fund_invariants.md  invariants_enforcement.md  state_machine.md
security/threat_model/: README.md  threat_model.md
tests/: README.md  __init__.py  test_fortiescrow.py  test_fund_lock.py  test_invariants.py  test_multisig_escrow.py  test_security_fixes.py  test_simple_escrow.py
tests/adversarial/: test_fund_lock_prevention.py
tests/integration/: README.md
tests/invariant/: test_contract_verification.py  test_invariant_validation.py  test_invariants.py
tests/performance/: README.md
tests/security/: README.md
tests/unit/: README.md  test_basic_escrow.py  (+2 more)
