[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forti-escrow"
version = "1.0.0"
description = "Security-first escrow framework on Tezos"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name = "FortiEscrow Team"}]
dependencies = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-timeout>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/FortiEscrow-Labs"
"Bug Tracker" = "https://github.com/yourusername/FortiEscrow-Labs/issues"
Documentation = "https://github.com/yourusername/FortiEscrow-Labs/docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
